--- a/Pet _Information.html
+++ b/Pet _Information.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+     <link rel="icon" href="./pictures/web-icon.png ">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Pet Information</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="back">
+<body class="back" class="body10">
 
      <!-- navbar-->
     <nav class="nav">
@@ -26,7 +27,7 @@
      <!-- cards-->
 <div class="cards">
 
-    <a href="./Cat _Information.html">
+    <a href="./Cat _Information.html" class="text-none">
      <div class="card1 cat">
 <div><img class="photo1" src="./pictures/cat.jpeg" alt="cat" width="300px" height="200px" ></div>
 
@@ -34,7 +35,7 @@
      </div>
 </a>
 
-<a href="./Dog_Information.html">
+<a href="./Dog_Information.html" class="text-none">
      <div class="card2 dog">
         <div><img class="photo2" src="./pictures/dog.webp" alt="dog" width="300px" height="200px" ></div>
 
@@ -43,7 +44,7 @@
      </div>
     </a>
 
-    <a href="./Bird_Information.html">
+    <a href="./Bird_Information.html" class="text-none">
      <div class="card3 bird">
         <div><img class="photo3" src="./pictures/bird.jpg" alt="bird" width="300px" height="200px" ></div>
 
@@ -52,7 +53,7 @@
      </div>
     </a>
      
-    <a href="./Fish_Information.html">
+    <a href="./Fish_Information.html" class="text-none">
      <div class="card4 fish">
         <div><img class="photo4" src="./pictures/fish.jpg" alt="fish" width="300px" height="200px" ></div>
 
