--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="icon" href="./pictures/web-icon.png ">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 </head>
 <body>
     <nav class="nav">
@@ -70,7 +72,10 @@
         
         </div>
 
-        <div class="home-end"></div>
+
+        
+
+
 
     </body>
 </html>
