--- a/Dog_Information.html
+++ b/Dog_Information.html
@@ -16,7 +16,7 @@
 
 <a class="text-none info hover-nav" href="./Pet _Information.html">Pet Information</a>
 
-<a class="text-none stores hover-nav" href="./Pet_Stores.html">Pet Stores</a>
+<a class="text-none stores hover-nav" href="./Pet_Store.html">Pet Store</a>
 
 <a class="text-none services hover-nav" href="./Pet_Services.html">Pet Services</a>
 
