--- a/Pet_Services.html
+++ b/Pet_Services.html
@@ -15,7 +15,7 @@
 
 <a class="text-none info hover-nav" href="./Pet _Information.html">Pet Information</a>
 
-<a class="text-none stores hover-nav" href="./Pet_Stores.html">Pet Stores</a>
+<a class="text-none stores hover-nav" href="./Pet_Store.html">Pet Store</a>
 
 <a class="text-none services hover-nav" href="./Pet_Services.html">Pet Services</a>
 
@@ -97,7 +97,7 @@
              </div>
             </a>
              
-            <a href="./Fish_Information.html" class="text-none">
+            <a href="./Home.html" class="text-none">
              <div class="card4 pet-planet">
                 <div><img class="photo4" src="./pictures/pet-planet.png" alt="pet-planet" width="300px" height="200px" ></div>
         
